# ComfyUI_MileHighStyler

./: LICENSE  README.md  pyproject.toml  sdxl_prompt_styler.py  styler_config.json
ComfyUI_MileHighStyler/data/Azazeal Styles/: Line_Art_Styles.json
ComfyUI_MileHighStyler/data/artist/: Artists.json
data/Animation_studios_2000s/: New Text Document.json
data/Anime/: anime.json
data/Claymation_Studios/: CMS.json
data/Fashion/: fashion_style_options_reformatted_50_corrected.json
data/FluxMileHighBeta/: FLUX_Finish_Styles.json
data/FluxMileHighTest/: mile_high_styles_Flux_power.json
data/FluxMileHighalpha/: FLUX_Mode_Style.jsonx  Flux_utf8.json
data/LUTs/: Modified_LUTs_100.json
data/adjective/: adjective.json
data/banana_styles/: bananas.json
data/breast_state/: breast_state.json
data/cgi/: cgi.json
data/clothing_state/: clothing_state.json
data/era/: era_options_reformatted_50_corrected.json
data/filter_options/: filter_options_reformatted_modified.json
data/fluxfinish/: FLUX_Finish_Styles2.json
data/focal_point/: focal point.json
data/milehighV2/: final_correctly_formatted_mile_high_styles.json
data/milehighV3/: e.json  final_corrected_merged_styles_part1.json  final_corrected_merged_styles_part2.json  final_corrected_merged_styles_part3.json  final_corrected_merged_styles_part4.json
data/mode/: mode_options_reformatted_50_corrected.json
data/preposition/: preposition.json
data/subject_count/: subject_count_options_reformatted_50_corrected.json
data/unique_identifier/: unique_style_identifier_modified.json
(+7 files in other folders)
